--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ kieserver.location=http://localhost:8090/rest/server
 kieserver.drools.enabled=true
 kieserver.dmn.enabled=true
 kieserver.swagger.enabled=true
+org.drools.server.filter.classes=true
 
 #data source configuration
 spring.datasource.username=sa
